# utfbom

./: .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg
tests/: test_utfbom.py
utfbom/: __main__.py
