[tool.poetry]
name = "utfbom"
version = "0.1.1"
description = "A CLI app to encode CSV files in UTF-8 with BOM."
authors = ["Mohammad Al-Thunayan <malthunayan4@gmail.com>"]

[tool.poetry.scripts]
utfbom = "utfbom.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.0"
flake8 = "^3.8.4"
mypy = "^0.800"
black = "^20.8b1"
isort = "^5.7.0"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
